<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.SpamerInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FDFDFD"
            android:src="@drawable/baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/toolbarInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="145dp"
            android:text="@string/new_spamer"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FDFDFD"
            android:src="@drawable/baseline_done_24" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:digits="1234567890+-() "
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/etComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumber"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etComments"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/categories"
        android:textColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCategories"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:paddingTop="2dp"
        android:paddingEnd="8dp"
        tools:itemCount="1"
        tools:listitem="@layout/item_chosen_categories" />

    <Button
        android:id="@+id/buttonChangeCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvCategories"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/change_categories"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/buttonRemoveFromSpam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvCategories"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/no_spam"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible" />
</RelativeLayout>